@@ -1,3 +1,8 @@
+2008-08-30  Dennis Schulmeister  <dennis -at- ncc-1701a.homelinux.net>
+
+ * Added exception hook which shows uncatched exceptions in a dialog.
+
+
 2008-08-29  Dennis Schulmeister  <dennis -at- ncc-1701a.homelinux.net>
 
  * Finished setlist export and printing.
